err/pyscheduler.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyScheduler-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pyscheduler'...
Compiling './lib/python3.5/site-packages/pyscheduler/processParallelScheduler.py'...
***   File "./lib/python3.5/site-packages/pyscheduler/processParallelScheduler.py", line 17
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyscheduler/serialScheduler.py'...
***   File "./lib/python3.5/site-packages/pyscheduler/serialScheduler.py", line 101
    print "It was impossible to pick a suitable task for running. Check dependencies."
                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyscheduler/test'...
Compiling './lib/python3.5/site-packages/pyscheduler/test/TestTaskSchedulers.py'...
***   File "./lib/python3.5/site-packages/pyscheduler/test/TestTaskSchedulers.py", line 16
    print this, "is going to sleep"
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
